# BattleMapsBot

./: .gitignore  AGENTS.md  Dockerfile  README.md  benchmark_rendering.py  config.yaml  profile_renderer.py  pyproject.toml  pyrightconfig.json  renderer.prof
.serena/: project.yml
.serena/memories/: resources_content.md
archive_v1/: SETUP.md  main.py  redis.json
cache/: aw2_atlas.npz
data/: maps.db
src/: config.py  main.py
src/cogs/: admin.py  maps.py
src/core/: aw2_atlas.py  aw2_data.py  aw2_renderer.py  aw2_sea_data.py  awbw.py  data.py  renderer.py  repository.py  resources.py  stats.py
src/utils/: awbw_api.py  awbw_data.py  awmap.py  errors.py  map_helpers.py  tools.py
src/utils/data/: __init__.py  element_id.py
tests/: map_ids_cache.json  regression_test.py
utils/: classes.py
