[project]
name = "battlemaps"
version = "0.0.1"
description = "A simple utility bot for the AWBW Discord server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py[voice]>=2.6.0",
    "aiohttp>=3.9.0",
    "mutagen>=1.47.0",
    "pillow>=11.0.0",
    "PyGithub>=2.8.1",
    "pytz>=2024.1",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "urllib3>=2.2.0",
    "typing>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "discord-ext-menus>=1.1",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
