[project]
name = "battlemaps"
version = "0.0.1"
description = "A simple utility bot for the AWBW Discord server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4.0",
    "aiohttp>=3.9.0",
    "pillow>=11.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.4.2",
    "aiolimiter>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
