[project]
name = "battlemaps"
version = "1.0.0"
description = "A simple utility bot for the AWBW Discord server"
readme = "README.md"
requires-python = ">=3.15"
authors = [
    {name = "DeveloperJose"},
    {name = "SirThane"},
]
dependencies = [
    "discord-py>=2.4.0",
    "aiohttp>=3.9.0",
    "pillow @ git+https://github.com/python-pillow/Pillow.git",
    "python-dotenv>=1.0.0",
    "numpy>=2.4.2",
    "aiolimiter>=1.2.1",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]